# VFX

./: .gitignore  Cargo.toml  README.md
res/shaders/: OpenVDB.wgsl  PathTracer.wgsl
src/: camera.rs  file.rs  main.rs  simulations.rs  texture.rs  views.rs
src/file/import/: NeRF-Tex.rs
src/modifiers/effects/: colour-grading.rs  gamut-mapping.rs
src/procedual/noise/: Cellular.rs  GenerationofPoints.rs
src/views/: add.rs  inital.rs  items.rs  style.rs
