[package]
name = "vfx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kas = "0.8"
wgpu = "0.9"
winit = "0.25"
naga = "0.5"
hecs = "0.5"
# File
rkyv = "0.6"
#nom = "6.2"

# Math
glam = "0.17"
# Audio
rodio = "0.14"
# Image
image = "0.23.14"