[package]
name = "vfx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.7", features = [ "derive" ] }
imgui-wgpu = "0.16"
wgpu = "0.9"
winit = "0.25"
naga = "0.5"
hecs = "0.5"
log = "0.4"
env_logger = "0.9"


futures = "0.3"
rayon = "1.5"

# Math
cgmath = "0.18"
# Audio
rodio = "0.14"
# Image
image = "0.23"


# File
rkyv = "0.7"
#nom = "6.2"
tobj = "3.0"
gltf = "0.16"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
